--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach." />
-  <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations" />
-  <meta name="author" content="Holy Spirit Prayer House" />
-  <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-  
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
+  <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
+  <meta name="author" content="Holy Spirit Prayer House">
+  <title>About Us | Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
 
   <script>
     function toggleLanguage(lang) {
+      localStorage.setItem("preferredLanguage", lang);
       document.body.classList.remove("english", "telugu");
       document.body.classList.add(lang);
     }
 
-    document.addEventListener("DOMContentLoaded", function () {
-      document.body.classList.add("english");
+    document.addEventListener("DOMContentLoaded", function() {
+      const savedLang = localStorage.getItem("preferredLanguage") || "english";
+      document.body.classList.remove("english", "telugu");
+      document.body.classList.add(savedLang);
     });
   </script>
 
@@ -142,7 +146,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+
+    .hero-container {
       text-align: center;
+      max-width: 800px;
+      padding: 0 20px;
     }
 
     .hero-content h1 {
@@ -156,6 +165,23 @@
       font-size: 1.3rem;
       margin-bottom: 30px;
       color: #f0f0f0;
+    }
+
+    .cta-button {
+      display: inline-block;
+      background-color: #b22222;
+      color: white;
+      padding: 15px 30px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 600;
+      font-size: 1.1rem;
+      transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .cta-button:hover {
+      background-color: #8b0000;
+      transform: translateY(-2px);
     }
 
     /* Main Content Sections */
@@ -202,6 +228,7 @@
       margin: 20px 0;
       font-style: italic;
       color: #f0f0f0;
+      border-radius: 4px;
     }
 
     /* Mission Section */
@@ -230,29 +257,53 @@
       color: #e0e0e0;
     }
 
-    /* Footer */
-    footer {
-      background-color: #8b0000;
-      color: #fff;
+    /* Founders Section */
+    .founders-section {
+      background-color: #1a1a1a;
+      padding: 60px 20px;
+    }
+
+    .founder-container {
+      max-width: 800px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 40px;
       text-align: center;
-      padding: 40px 20px;
-      margin-top: 60px;
     }
 
-    .footer-container p {
+    .founder, .co-founder {
+      background-color: #2a2a2a;
+      padding: 40px;
+      border-radius: 8px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .founder:hover, .co-founder:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+
+    .founder-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
       margin-bottom: 20px;
-      font-size: 0.9rem;
+      border: 4px solid #b22222;
     }
 
-    .social-icons img {
-      width: 24px;
-      margin: 0 10px;
-      filter: brightness(0) invert(1);
-      transition: opacity 0.3s;
+    .founder h2, .co-founder h2 {
+      font-family: 'Bungee', cursive;
+      color: #b22222;
+      font-size: 1.3rem;
+      margin-bottom: 10px;
     }
 
-    .social-icons img:hover {
-      opacity: 0.7;
+    .founder h3, .co-founder h3 {
+      color: #e0e0e0;
+      font-size: 1.1rem;
+      font-weight: 500;
     }
 
     /* Chatbot */
@@ -323,6 +374,31 @@
       cursor: pointer;
     }
 
+    /* Footer */
+    footer {
+      background-color: #8b0000;
+      color: #fff;
+      text-align: center;
+      padding: 40px 20px;
+      margin-top: 60px;
+    }
+
+    .footer-container p {
+      margin-bottom: 20px;
+      font-size: 0.9rem;
+    }
+
+    .social-icons img {
+      width: 24px;
+      margin: 0 10px;
+      filter: brightness(0) invert(1);
+      transition: opacity 0.3s;
+    }
+
+    .social-icons img:hover {
+      opacity: 0.7;
+    }
+
     /* Responsive Design */
     @media (max-width: 768px) {
       .desktop-nav {
@@ -346,6 +422,10 @@
         margin: 40px auto;
       }
 
+      .founder-container {
+        grid-template-columns: 1fr;
+      }
+
       .chatbot-popup {
         width: 90%;
         right: 5%;
@@ -355,18 +435,18 @@
 </head>
 <body class="english">
   <!-- Language Toggle -->
-  <div class="language-toggle" role="region" aria-label="Language selection">
-    <button onclick="toggleLanguage('english')" aria-pressed="true">English</button>
-    <button onclick="toggleLanguage('telugu')" aria-pressed="false">తెలుగు</button>
+  <div class="language-toggle">
+    <button onclick="toggleLanguage('english')">English</button>
+    <button onclick="toggleLanguage('telugu')">తెలుగు</button>
   </div>
 
   <!-- Header -->
   <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
-        <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo" />
+        <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
-      <nav class="desktop-nav" role="navigation" aria-label="Primary navigation">
+      <nav class="desktop-nav">
         <ul class="nav-links">
           <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
           <li><a href="about.html" style="color: #ffe4e1;"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
@@ -379,9 +459,9 @@
           <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
         </ul>
       </nav>
-      <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu" aria-expanded="false">☰</button>
+      <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
-    <nav class="mobile-nav" id="mobileNav" aria-label="Mobile navigation">
+    <nav class="mobile-nav" id="mobileNav">
       <ul class="nav-links">
         <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
         <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
@@ -398,15 +478,21 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <div class="hero-content">
-      <h1>
-        <span class="english-text">About Us</span>
-        <span class="telugu-text">మా గురించి</span>
-      </h1>
-      <p>
-        <span class="english-text">Learn about our faith, mission, and community</span>
-        <span class="telugu-text">మా విశ్వాసం, లక్ష్యం మరియు సమాజం గురించి తెలుసుకోండి</span>
-      </p>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1>
+          <span class="english-text">About Us</span>
+          <span class="telugu-text">మా గురించి</span>
+        </h1>
+        <p>
+          <span class="english-text">Bringing Hope, Love, and Support to the Community</span>
+          <span class="telugu-text">భక్తి, ప్రేమ, మద్దతు సమాజానికి అందించడమే మా లక్ష్యం</span>
+        </p>
+        <a href="contact.html" class="cta-button">
+          <span class="english-text">Get in Touch</span>
+          <span class="telugu-text">సంపర్కంలో ఉండండి</span>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -443,6 +529,14 @@
             "మీ పాపముల క్షమాపణ కొరకు..." — అపొస్తలుల కార్యములు 2:38–39
           </span>
         </div>
+        <p>
+          <span class="english-text">
+            Our faith is built on the solid foundation of God's Word and the transforming power of Jesus Christ.
+          </span>
+          <span class="telugu-text">
+            మా విశ్వాసం దేవుని వాక్యం మరియు యేసుక్రీస్తు యొక్క మార్చే శక్తిపై ఆధారపడి ఉంది.
+          </span>
+        </p>
       </div>
 
       <!-- Our Values -->
@@ -479,12 +573,28 @@
         </p>
       </div>
     </section>
+
+    <!-- Founders Section -->
+    <section class="founders-section">
+      <div class="founder-container">
+        <div class="founder">
+          <img src="images/founder.jpg" alt="Founder Image" class="founder-img">
+          <h2><span class="english-text">Founder</span><span class="telugu-text">స్థాపకుడు</span></h2>
+          <h3><span class="english-text">Pastor P. Moses</span><span class="telugu-text">పాస్టర్ పి. మోసెస్</span></h3>
+        </div>
+        <div class="co-founder">
+          <img src="images/co-founder.jpg" alt="Co-Founder Image" class="founder-img">
+          <h2><span class="english-text">Co-Founder</span><span class="telugu-text">సహ-స్థాపకుడు</span></h2>
+          <h3><span class="english-text">Bro. Billygraham Moses</span><span class="telugu-text">బ్రదర్ బిలీగ్రాహం మోసెస్</span></h3>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- Chatbot Button -->
   <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
     <div class="chatbot-wrapper">
-      <img src="images/founder.jpg" alt="Chat with Amma" />
+      <img src="images/founder.jpg" alt="Chat with Amma">
       <span>
         <span class="english-text">Talk with Amma</span>
         <span class="telugu-text">అమ్మతో చాట్ చేయండి</span>
@@ -493,12 +603,12 @@
   </button>
 
   <!-- Chatbot Popup -->
-  <div id="chatbot-popup" class="chatbot-popup hidden" role="dialog" aria-modal="true" aria-labelledby="chatbot-header">
-    <div class="chatbot-header" id="chatbot-header">
-      <span><span class="english-text">Chat with Amma</span><span class="telugu-text">అమ్మతో చాట్ చేయండি</span></span>
-      <button id="close-chatbot" class="close-button" aria-label="Close Chatbot">&times;</button>
+  <div id="chatbot-popup" class="chatbot-popup hidden">
+    <div class="chatbot-header">
+      <span><span class="english-text">Chat with Amma</span><span class="telugu-text">అమ్మతో చాట్ చేయండి</span></span>
+      <button id="close-chatbot" class="close-button">&times;</button>
     </div>
-    <iframe src="https://talkwithamma.azurewebsites.net" width="100%" height="400" title="Chat with Amma chatbot"></iframe>
+    <iframe src="https://talkwithamma.azurewebsites.net" width="100%" height="400"></iframe>
   </div>
 
   <!-- Footer -->
@@ -509,15 +619,15 @@
         <span class="english-text">All Rights Reserved</span>
         <span class="telugu-text">అన్ని హక్కులు పరిరక్షించబడినవి</span>
       </p>
-      <div class="social-icons" role="region" aria-label="Social media links">
+      <div class="social-icons">
         <a href="https://www.youtube.com/@pastorpmoses" target="_blank" aria-label="YouTube">
-          <img src="images/youtube.png" alt="YouTube" />
+          <img src="images/youtube.png" alt="YouTube">
         </a>
         <a href="https://www.instagram.com/hsph_oduru/" target="_blank" aria-label="Instagram">
-          <img src="images/instagram.png" alt="Instagram" />
+          <img src="images/instagram.png" alt="Instagram">
         </a>
         <a href="https://www.facebook.com/holy.jesus132" target="_blank" aria-label="Facebook">
-          <img src="images/facebook.png" alt="Facebook" />
+          <img src="images/facebook.png" alt="Facebook">
         </a>
       </div>
     </div>
